--- a/UT3/TE3/src/index.html
+++ b/UT3/TE3/src/index.html
@@ -47,33 +47,32 @@
                     <input class="boton" type="button" value="Generar" onclick="imagenesDinamicas()"/>
                 </div>
             </div>
-            <div class="imagenes" name="imagenes">
-                <img name="image01" class="hide" src="./img/image01.jpg"/>
-                <img name="image02" class="hide" src="./img/image02.jpg"/>
-                <img name="image03" class="hide" src="./img/image03.jpg"/>
-                <img name="image04" class="hide" src="./img/image04.jpg"/>
-                <img name="image05" class="hide" src="./img/image05.jpg"/>
-                <img name="image06" class="hide" src="./img/image06.jpg"/>
-                <img name="image07" class="hide" src="./img/image07.jpg"/>
-                <img name="image08" class="hide" src="./img/image08.jpg"/>
-                <img name="image09" class="hide" src="./img/image09.jpg"/>
-                <img name="image10" class="hide" src="./img/image10.jpg"/>
-                <img name="image11" class="hide" src="./img/image11.jpg"/>
-                <img name="image12" class="hide" src="./img/image12.jpg"/>
-                <img name="image13" class="hide" src="./img/image13.jpg"/>
-                <img name="image14" class="hide" src="./img/image14.jpg"/>
-                <img name="image15" class="hide" src="./img/image15.jpg"/>
-                <img name="image16" class="hide" src="./img/image16.jpg"/>
-                <img name="image17" class="hide" src="./img/image17.jpg"/>
-                <img name="image18" class="hide" src="./img/image18.jpg"/>
-                <img name="image19" class="hide" src="./img/image19.jpg"/>
-                <img name="image20" class="hide" src="./img/image20.jpg"/>
+            <div class="imagenes hide" name="imagenes">
+                <img name="image01" src="img/image01.jpg"/>
+                <img name="image02" src="img/image02.jpg"/>
+                <img name="image03" src="img/image03.jpg"/>
+                <img name="image04" src="img/image04.jpg"/>
+                <img name="image05" src="img/image05.jpg"/>
+                <img name="image06" src="img/image06.jpg"/>
+                <img name="image07" src="img/image07.jpg"/>
+                <img name="image08" src="img/image08.jpg"/>
+                <img name="image09" src="img/image09.jpg"/>
+                <img name="image10" src="img/image10.jpg"/>
+                <img name="image11" src="img/image11.jpg"/>
+                <img name="image12" src="img/image12.jpg"/>
+                <img name="image13" src="img/image13.jpg"/>
+                <img name="image14" src="img/image14.jpg"/>
+                <img name="image15" src="img/image15.jpg"/>
+                <img name="image16" src="img/image16.jpg"/>
+                <img name="image17" src="img/image17.jpg"/>
+                <img name="image18" src="img/image18.jpg"/>
+                <img name="image19" src="img/image19.jpg"/>
+                <img name="image20" src="img/image20.jpg"/>
             </div>
         </div>
         <div class="footer">
             <h2>Trabajo realizado por <a href="https://github.com/Tomhuel">Tomhuel</a></h2>
         </div>
-    </div>
     <script src="imagenesDinamicas.js"></script>
 </body>
 </html>
